tests/macro-tests/cases/widget_new/missing_field_all_single.stderr
error[E0277]: the trait bound `(): IntoVar<SideOffsets>` is not satisfied
 --> cases/widget_new/missing_field_all_single.rs:8:18
  |
8 |         margin = {}
  |         ------   ^^ the trait `IntoVar<SideOffsets>` is not implemented for `()`
  |         |
  |         required by a bound introduced by this call
  |
  = note: `IntoVar<T>` is implemented for all `T: VarValue`
  = note: `IntoVar<T>` is implemented for `Var<T>`, `ContextVar<T>` and others
  = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `zng::layout::margin::margin`
 --> $WORKSPACE/crates/zng-wgt/src/layout_props.rs
  |
  | pub fn margin(child: impl IntoUiNode, margin: impl IntoVar<SideOffsets>) -> UiNode {
  |                                                ^^^^^^^^^^^^^^^^^^^^ required by this bound in `margin::margin`
